@@ -133,7 +133,9 @@ Other Changes
 * SOLR-7381: Improve logging by adding node name in MDC in SolrCloud mode and adding MDC to
   all thread pools. A new MDCAwareThreadPoolExecutor is introduced and usages of
   Executors#newFixedThreadPool, #newSingleThreadExecutor, #newCachedThreadPool as well as
-  ThreadPoolExecutor directly is now forbidden in Solr. (shalin)
+  ThreadPoolExecutor directly is now forbidden in Solr. MDC keys are now exposed in thread
+  names automatically so that a thread dump can give hints on what the thread was doing.
+  (shalin)
 
 * SOLR-7384: Fix spurious failures in FullSolrCloudDistribCmdsTest. (shalin)
 
